z-index issue solved on feed

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -102,7 +102,7 @@
     position: absolute;
     top: 13%;
     right: 10px;
-    z-index: 1000;
+    z-index: 1;
 }
 
 .header-feed-txt{
